# ros_gararge

./: README.md
3dayex/examples/lecture_4_ex_s/src/: IMU.py  camera.py  lidar.py  motor.py
3dayex/examples/lecture_6_ex_t/src/: go_cam.py  go_video.py
3dayex/final/: go_video.py
3dayex/minicar/: go_cam.py  go_video.py
3dayex/minicar/sensor_ex/sensor_ex/: CMakeLists.txt  package.xml
3dayex/minicar/sensor_ex/sensor_ex/launch/: IMU.launch  camera.launch  lidar.launch  motor.launch
3dayex/minicar/sensor_ex/sensor_ex/src/: IMU.py  lidar.py
3dayex/solution/: camera.py  car.py  img.py  motor.py  spot.py
3dayex/solution/complete/: lecture_4_ex.tgz
next/: darknetros_test.launch
next/darknet_sub/: CMakeLists.txt  package.xml
next/darknet_sub/launch/: darknetros_sub_test.launch
next/darknet_sub/msg/: MsgState.msg
next/darknet_sub/src/: darknet_sub_node.cpp  note.txt
next2/: readme.txt
python/sensor_ex/lecture_7_ex/: CMakeLists.txt  package.xml
python/sensor_ex/lecture_7_ex/launch/: IMU.launch  camera.launch  lidar.launch  motor.launch
python/sensor_ex/lecture_7_ex/src/: camera.py
python/sensor_ex/lecture_8_ex/: black.py  camera_player.py  hsv.py  opencv_ex.py  video_player.py
python/test_ros_pkg/: CMakeLists.txt  package.xml
python/test_ros_pkg/launch/: topic_test.launch
python/test_ros_pkg/src/: topic_pub.py  topic_sub.py
ros_service_test/: CMakeLists.txt  package.xml
ros_service_test/src/: ros_service_client.cpp  ros_service_server.cpp
ros_service_test/srv/: SrvTest.srv
ros_topic_test/: CMakeLists.txt  package.xml
ros_topic_test/launch/: launch_test.launch
ros_topic_test/src/: topic_pub_test.cpp  topic_sub_test.cpp
