<?xml version="1.0"?>
<package format="2">
  <name>darknet_sub</name>
  <version>0.0.0</version>
  <description>The darknet_sub package</description>

  <maintainer email="kate.brighteyes@gmail.com">kate</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>darknet_ros</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>
  </export>
</package>
